--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@hennge/vue3-pagination": "^1.0.17",
+    "@vee-validate/rules": "^4.8.6",
     "axios": "^1.3.5",
+    "chart.js": "^4.3.0",
     "core-js": "^3.8.3",
+    "mosha-vue-toastify": "^1.0.23",
     "register-service-worker": "^1.7.2",
+    "vee-validate": "^4.8.6",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
@@ -28,8 +34,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "postcss": "^8.4.21",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0",
-    "tailwindcss": "^3.3.1"
+    "sass": "^1.62.0",
+    "sass-loader": "^12.6.0"
   }
 }
